My semi-working NTP client and time utils
Leaving it here as commit, but moving to internal Espressif/LWIP one in near future

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,4 +11,15 @@
 [env:nodemcu]
 platform = espressif8266
 board = nodemcu
+monitor_speed = 115200
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit GFX Library@^1.11.5
+	https://github.com/2dom/PxMatrix.git#0c7c63c0248321a31dedcefcdaebc87df4624141
+build_flags = 
+	-std=gnu++17
+	-D_BSD_SOURCE
+	-DWIFI_SSID='"Hello123"'
+	-DWIFI_PASS='"Hello123"'
+build_unflags =
+	-std=gnu++11
