--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu]
+[env]
 platform = espressif8266
-board = nodemcu
+board = nodemcuv2 # v3? 
 monitor_speed = 115200
+monitor_filters = esp8266_exception_decoder, default
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.11.5
 	https://github.com/2dom/PxMatrix.git#0c7c63c0248321a31dedcefcdaebc87df4624141
+	milesburton/DallasTemperature@^3.9.1
+	paulstoffregen/OneWire@^2.3.6
 build_flags = 
 	-std=gnu++17
 	-D_BSD_SOURCE
@@ -23,3 +26,7 @@ build_flags =
 	-DWIFI_PASS='"Hello123"'
 build_unflags =
 	-std=gnu++11
+
+[env:debug]
+build_type = debug
+monitor_filters = esp8266_exception_decoder
