Many changes (incl. web server & networking)
+ Web server (and support code & scripts)
+ Network configuration module
+ EEPROM settings persisting
+ Separate NTP code away from main file
+ Update gitignore and README

Adapted from my other project at https://github.com/AgainPsychoX/AquariumController

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,14 @@
 {
 	"cSpell.words": [
+		"authmode",
+		"bssid",
+		"datetime",
 		"dhcpc",
+		"dhcps",
 		"opmode",
-		"SNTP"
+		"setserver",
+		"SNTP",
+		"SOFTAP",
+		"xtensa"
 	]
 }
