Lay plans for "pages" system

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
 	"cSpell.words": [
 		"authmode",
 		"bssid",
+		"clocale",
 		"datetime",
 		"dhcpc",
 		"dhcps",
 		"opmode",
+		"setlocale",
 		"setserver",
 		"SNTP",
 		"SOFTAP",
