--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,74 @@
 {
 	"cSpell.words": [
 		"authmode",
+		"BITMAPCOREHEADER",
+		"BITMAPFILEHEADER",
+		"BITMAPINFOHEADER",
+		"BITMAPV",
 		"bssid",
 		"clocale",
 		"datetime",
 		"dhcpc",
 		"dhcps",
+		"FPSTR",
+		"INFOHEADER",
 		"opmode",
 		"setlocale",
 		"setserver",
 		"SNTP",
 		"SOFTAP",
 		"xtensa"
-	]
+	],
+	"files.associations": {
+		"cstddef": "cpp",
+		"ranges": "cpp",
+		"functional": "cpp",
+		"array": "cpp",
+		"atomic": "cpp",
+		"bit": "cpp",
+		"*.tcc": "cpp",
+		"cctype": "cpp",
+		"clocale": "cpp",
+		"cmath": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
+		"cstdarg": "cpp",
+		"cstdint": "cpp",
+		"cstdio": "cpp",
+		"cstdlib": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"cwchar": "cpp",
+		"cwctype": "cpp",
+		"deque": "cpp",
+		"list": "cpp",
+		"map": "cpp",
+		"set": "cpp",
+		"unordered_map": "cpp",
+		"vector": "cpp",
+		"exception": "cpp",
+		"algorithm": "cpp",
+		"iterator": "cpp",
+		"memory": "cpp",
+		"memory_resource": "cpp",
+		"numeric": "cpp",
+		"optional": "cpp",
+		"random": "cpp",
+		"string": "cpp",
+		"string_view": "cpp",
+		"system_error": "cpp",
+		"tuple": "cpp",
+		"type_traits": "cpp",
+		"utility": "cpp",
+		"initializer_list": "cpp",
+		"iosfwd": "cpp",
+		"limits": "cpp",
+		"new": "cpp",
+		"ostream": "cpp",
+		"stdexcept": "cpp",
+		"streambuf": "cpp",
+		"cinttypes": "cpp",
+		"typeinfo": "cpp",
+		"iostream": "cpp"
+	}
 }
