Handle upload & processing of BMP files (untested)

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,18 +14,21 @@ board = nodemcuv2 # v3?
 monitor_speed = 115200
 monitor_filters = esp8266_exception_decoder, default
 framework = arduino
+board_build.filesystem = littlefs
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.11.5
 	https://github.com/2dom/PxMatrix.git#0c7c63c0248321a31dedcefcdaebc87df4624141
 	milesburton/DallasTemperature@^3.9.1
 	paulstoffregen/OneWire@^2.3.6
 build_flags = 
-	-std=gnu++17
+	-std=gnu++20
 	-D_BSD_SOURCE
 	-DWIFI_SSID='"Hello123"'
 	-DWIFI_PASS='"Hello123"'
 build_unflags =
 	-std=gnu++11
+	-std=gnu++14
+	-std=gnu++17
 
 [env:debug]
 build_type = debug
