--- a/platformio.ini
+++ b/platformio.ini
@@ -23,8 +23,6 @@ lib_deps =
 build_flags = 
 	-std=gnu++20
 	-D_BSD_SOURCE
-	-DWIFI_SSID='"Hello123"'
-	-DWIFI_PASS='"Hello123"'
 build_unflags =
 	-std=gnu++11
 	-std=gnu++14
@@ -33,3 +31,7 @@ build_unflags =
 [env:debug]
 build_type = debug
 monitor_filters = esp8266_exception_decoder
+build_flags =
+	-std=gnu++20
+	-D_BSD_SOURCE
+	-DDEBUG_ESP_OOM
